# FileSyncNX

./: .gitignore  .gitmodules  FileSyncNX.code-workspace  Makefile  README.md  meson.build
src/: FSNXapp.cpp
